# surreal-mem-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FRAMEWORKS.md  LICENSE  README.kor.md  README.md  README.zh-CN.md  SECURITY.md  cgc.spec  pyproject.toml
.github/workflows/: build.yml  release.yml
.skills/surreal-mem-mcp/: SKILL.md
docs/: BUNDLE_IMPLEMENTATION.md  BUNDLE_SUMMARY.md
mcp-benchmark-test/: .gitignore  benchmark-results.md
src/codegraphcontext/cli/: config_manager.py
src/codegraphcontext/core/: __init__.py
src/codegraphcontext/tools/: code_finder.py  graph_builder.py
surreal-mem-mcp/: .cursorrules  .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  FRAMEWORKS.md  GEMINI.md  README.md
surreal-mem-mcp/.cargo/: config.toml
surreal-mem-mcp/cli/: surreal-memory-init.py
surreal-mem-mcp/src/: http_server.rs  main.rs  mcp_types.rs  resources.rs  surreal_client.rs  tools.rs
surreal-mem-mcp/src/ast/: indexer.rs  mod.rs  parser.rs
surreal-mem-mcp/src/embeddings/: local.rs  openai.rs
surreal-mem-mcp/src/registry/: discovery.rs  graph_mapper.rs  mod.rs  proxy.rs  skill_ingestor.rs  tool_registry.rs
surreal-mem-mcp/src/security/: mod.rs  redactor.rs
tests/unit/core/: test_skip_external_resolution.py
