[project]
name = "codegraphcontext"
version = "0.2.6"
description = "An MCP server that indexes local code into a graph database to provide context to AI assistants."
authors = [{ name = "Shashank Shekhar Singh", email = "shashankshekharsingh1205@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "neo4j>=5.15.0",
    "watchdog>=3.0.0",
    "stdlibs>=2023.11.18",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "inquirerpy>=0.3.4",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.6.0",
    "pyyaml",
    "pytest",
    "nbformat",
    "nbconvert>=7.16.6",
    "pathspec>=0.12.1",
    "falkordblite>=0.1.0; sys_platform != 'win32' and python_version >= '3.12'"
]

[project.optional-dependencies]
parsing = [
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.6.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.11.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/Shashankss1205/CodeGraphContext"
"Bug Tracker" = "https://github.com/Shashankss1205/CodeGraphContext/issues"

[project.scripts]
cgc = "codegraphcontext.cli.main:app"
codegraphcontext = "codegraphcontext.cli.main:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["codegraphcontext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["tests/fixtures", "tests/e2e/sample_projects", "venv", ".git", "__pycache__"]
markers = [
    "integration: mark a test as an integration test.",
    "e2e: mark a test as an end-to-end test.",
    "slow: mark test as slow."
]
